--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "expo": "^32.0.0",
     "firebase": "^6.0.2",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-firebase": "^5.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
